--- a/KidesServer/packages.config
+++ b/KidesServer/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.4" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.4" targetFramework="net452" />
