--- a/KidesServer/packages.config
+++ b/KidesServer/packages.config
@@ -4,15 +4,14 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="MySql.Data" version="6.10.4" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
-  <package id="Rx-Core" version="2.2.4" targetFramework="net452" />
-  <package id="Rx-Interfaces" version="2.2.4" targetFramework="net452" />
-  <package id="Rx-Linq" version="2.2.4" targetFramework="net452" />
-  <package id="Rx-Main" version="2.2.4" targetFramework="net452" />
-  <package id="Rx-PlatformServices" version="2.2.4" targetFramework="net452" />
-  <package id="Tx.Core" version="1.0.61007" targetFramework="net452" />
-  <package id="Tx.Windows" version="1.0.61007" targetFramework="net452" />
+  <package id="System.Reactive" version="3.0.0" targetFramework="net471" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net471" />
+  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net471" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net471" />
+  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net471" />
+  <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net471" />
+  <package id="Tx.Core" version="2.1.1" targetFramework="net471" />
+  <package id="Tx.Windows" version="2.1.1" targetFramework="net471" />
 </packages>
