Wot api changed a variable name

--- a/KidesServer/Web.config
+++ b/KidesServer/Web.config
@@ -26,7 +26,7 @@
     </handlers>
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Origin" value="https://server.icebingo.io" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
